samples/_failures_safe/1761178695_b2f3fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99507cff.c: In function ‘main’:
./samples/SAFE/__tmp_99507cff.c:130:5: error: expected expression at end of input
  130 |     if (!read_size_t("Enter columns for matrix A: ", &cols))
      |     ^~
./samples/SAFE/__tmp_99507cff.c:130:5: error: expected declaration or statement at end of input
